# Construct-Plugin-Steamworks

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  Steam test project.c3p
construct-plugin/: aces.json  addon.json  instance.js  instance.ts  plugin.js  plugin.ts  steamworks.ext.dylib  tsconfig.json  type.js  type.ts
construct-plugin/c3runtime/: actions.js  actions.ts  conditions.js  conditions.ts  expressions.js  expressions.ts  instance.js  instance.ts  main.js  plugin.js  plugin.ts  type.js  type.ts
construct-plugin/lang/: en-US.json
wrapper-extension/: CMakeLists.txt  IExtension.h  SteamCallbacks.cpp  SteamCallbacks.h  SteamExt.sln  SteamExt.vcxproj  SteamExt.vcxproj.filters  Utils.cpp  Utils.h  WrapperExtension.cpp  WrapperExtension.h  framework.h  pch.h
wrapper-extension/WrapperExtension.xcodeproj/: project.pbxproj
